--- a/Labs/Lab2-WebDev_HTML_CSS/Starter_Files/CS2001-Week2-Registration.html
+++ b/Labs/Lab2-WebDev_HTML_CSS/Starter_Files/CS2001-Week2-Registration.html
@@ -13,7 +13,7 @@
                        each list item should correspond to the menu items (Home, Register, Login, Help)
                        The css class of the menu is "navlist"
                        Check lecture slides about lists, an example of a more basic menu, and CSS class selector-->
-            <ul class="navlist">hi
+            <ul class="navlist">
             </ul>
          </nav>
         <main>
