--- a/Labs/Lab2-WebDev_HTML_CSS/Starter_Files/CS2001-Week2-Registration.html
+++ b/Labs/Lab2-WebDev_HTML_CSS/Starter_Files/CS2001-Week2-Registration.html
@@ -14,6 +14,8 @@
                        The css class of the menu is "navlist"
                        Check lecture slides about lists, an example of a more basic menu, and CSS class selector-->
             <ul class="navlist">
+                <li><a href="https://www.google.com">Home</a></li>
+
             </ul>
          </nav>
         <main>
